--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,12 @@ header{
     margin-left: 3%;
     margin-bottom: 2rem;
 }
+.c_s_caption h5{
+	opacity: 0.6;
+} 
+.c_s_caption p{
+	opacity: 0.6;
+}
 /*hero end*/ 
 
 /*service start*/
@@ -247,6 +253,10 @@ footer{
 .copyright p{
 	margin-top: 15px;
 	font-size: 12px;
+	color: #737c85;
+}
+.copyright p a{
+	text-decoration: none;
 	color: #737c85;
 }
 /*footer end*/	
